# winaudioremote

./: Cargo.toml  build.rs
.github/workflows/: rust.yml
lib/: .gitignore  PolicyConfig.h  WindowsAudioOutput.cpp  WindowsAudioOutput.h
src/: audiodevice.rs  main.rs  registry.rs
static/: index.html  index.pure.html
