[package]
name = "winaudioremote"
version = "0.1.0"
authors = ["Alican Erdogan <aerdogan07@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.6.6"
winapi = "0.3.9"
widestring = "0.4.3"
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.60"
futures = "0.3.8"
systray = { git = "https://github.com/nicolasbauw/systray-rs", tag="0.4.1" }
winreg = "0.8.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
lto = true # Link Time Optimization
opt-level = 'z' # Optimize for size.
codegen-units = 1 # Reduce Parallel Code Generation Units to Increase Optimization
